codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_enable_suggestion.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, area)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 13 },
    content: [
        "                                                                                ",
        "  Notion                                                                        ",
        "                                                                                ",
        "  Use $ to insert this app into the prompt.                                     ",
        "                                                                                ",
        "  Enable this app in Codex to use its tools in this session.                    ",
        "  Newly installed apps can take a few minutes to appear in /apps.               ",
        "                                                                                ",
        "                                                                                ",
        "  › 1. Manage on ChatGPT                                                        ",
        "    2. Enable app                                                               ",
        "    3. Back                                                                     ",
        "  Use tab / ↑ ↓ to move, enter to select, esc to close                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
