codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_generic_auth_url_elicitation.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Authentication required
  Server: github_mcp

  Sign in to GitHub to continue.

  URL
  https://github.example/login/device

  Complete authentication following the link in your browser.


  › 1. Open sign-in URL
    2. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
