codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_generic_url_elicitation_confirmation.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Finish in Browser

  Complete the requested action in the browser window that just
  opened.
  Then return here and select "I finished".

  Link:
  https://payments.example/checkout/123

› 1. I finished
  2. Back
  tab / ↑ ↓ move · enter select · esc close
